# achprak

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  achprak.ipynb  environment.yml  install.sh  pyproject.toml
.devcontainer/: devcontainer.json  setup-pixi.sh
.github/workflows/: deploy.yml
achprak/: __init__.py  azobenzene.py  common.py  conversion.py  optimization.py  uvvis.py  widgets.py
assets/: figures.ipynb
figures/commons/: ATTRIBUTION.md
figures/drawings/: dihedral.pptx
figures/scripts/: figures.ipynb
fundamentals/: index.md
notebooks/: achprak.ipynb  benchmarks.ipynb
results/: submit.bash  uvvis.py  uvvis_generate_submit.py  uvvis_standalone.py
site/: _toc.yml  index.md  installation.md  myst.yml  theory.md
site/fundamentals/: index.md
src/achprak/: __init__.py  azobenzene.py  clipboard.py  common.py  conversion.py  optimization.py  ui.py  uvvis.py  widgets.py
src/achprak.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
