[project]
authors = [{ name = "Michael von Domaros", email = "mvondomaros@uni-marburg.de" }]
name = "AChPrak"
requires-python = "==3.12.*"
version = "0.1.0"
dependencies = ["pymopac>=1.1,<2", "sella>=2.3.5,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
achprak = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
ase = ">=3.26.0,<4"
ipywidgets = ">=8.1.7,<9"
jupyterlab = ">=4.4.6,<5"
matplotlib = ">=3.10.5,<4"
nglview = ">=3.1.4,<4"
rdkit = ">=2025.3,<2026"
tblite-python = ">=0.4.0,<0.5"
mopac = ">=23.1.2,<24"
jupyterlab-myst = ">=2.4.2,<3"
mystmd = ">=1.6.0,<2"

[tool.pixi.host-dependencies]
jupyter-ruff = ">=0.3.0,<0.4"
setuptools = "<80"
pixi-pycharm = ">=0.0.8,<0.0.9"

[tool.pixi.target.linux-64.pypi-dependencies]
jupyterhub-systemdspawner = ">=1.0.2, <2"
jupyterhub-nativeauthenticator = ">=1.3.0, <2"
jupyterhub = ">=5.3.0, <6"
