[project]
name = "achprak"
version = "0.2.1"
authors = [
  { name = "Michael von Domaros", email = "mvondomaros@uni-marburg.de" }
]
description = "Jupyter-based practical introducing theoretical chemistry to first-year chemistry students"
readme = "README.md"
license = { file = "LICENSE" }

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.12,<3.13"

ipython = ">=9.10.0,<10"
ipywidgets = ">=8.1.8,<9"
matplotlib = ">=3.10.8,<4"
nglview = ">=4.0,<5"

numpy = ">=2.4.2,<3"
scipy = ">=1.17.0,<2"
ase = ">=3.27.0,<4"
rdkit = ">=2025.9.5,<2026"
tblite-python = ">=0.5.0,<0.6"
mopac = ">=23.2.2,<24"

[tool.pixi.feature.local.dependencies]
jupyterlab = ">=4.5.3,<5"
jupyterlab-myst = ">=2.6.0,<3"

[tool.pixi.feature.hub.dependencies]
ipykernel = ">=7.1.0,<8"

[tool.pixi.pypi-dependencies]
achprak = { path = ".", editable = true }
sella = ">=2.3.5, <3"
pymopac = ">=1.1, <2"

[tool.pixi.feature.dev.dependencies]
pytest = ">=9.0.2,<10"
jupyter-ruff = ">=0.3.1,<0.4"
pixi-pycharm = ">=0.0.10,<0.0.11"
mystmd = ">=1.8.0,<2"
pre-commit = ">=4.5.1,<5"

[tool.pixi.environments]
local = { features = ["local"] }
hub = { features = ["hub"] }
dev = { features = ["local", "dev"] }
