[project]
name = "achprak"
version = "0.4.1"
authors = [{ name = "Michael von Domaros", email = "mvondomaros@uni-marburg.de" }]
description = "Jupyter-based practical introducing theoretical chemistry to first-year chemistry students"
readme = "README.md"
license = { file = "LICENSE" }

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.12,<3.13"

ipython = ">=9.12.0,<10"
ipywidgets = ">=8.1.8,<9"
nglview = "==4.0.0"

numpy = ">=2.4.3,<3"
scipy = ">=1.17.1,<2"
matplotlib = ">=3.10.8,<4"

ase = ">=3.28.0,<4"
rdkit = ">=2026.3.1,<2027"
tblite-python = ">=0.5.0,<0.6"
mopac = ">=23.2.4,<24"

[tool.pixi.feature.local.dependencies]
jupyterlab = ">=4.5.6,<5"
jupyterlab-myst = ">=2.6.0,<3"

[tool.pixi.feature.hub.dependencies]
ipykernel = ">=7.2.0,<8"

[tool.pixi.pypi-dependencies]
achprak = { path = ".", editable = true }
sella = ">=2.4.2, <3"
pymopac = ">=1.1, <2"

[tool.pixi.feature.dev.dependencies]
pytest = ">=9.0.3,<10"
jupyter-ruff = ">=0.3.1,<0.4"
pixi-pycharm = ">=0.0.11,<0.0.12"
mystmd = ">=1.8.3,<2"
pre-commit = ">=4.5.1,<5"

[tool.pixi.environments]
local = { features = ["local"] }
hub = { features = ["hub"] }
dev = { features = ["local", "dev"] }

[tool.pixi.activation]
env = { TF_CPP_MIN_LOG_LEVEL = "3" }
